# prob-pipe

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRACTS.md  CONTRIBUTING.md  LICENSE  README.md  STYLE_GUIDE.md  bayesian_inference_extensions_plan.md  blackjax_mcmc_migration_plan.md  codecov.yml  dev-design-hierarchy_plan.md  environment.yml  global-prefect-config_plan.md  min_reqs.txt  mkdocs.yml  mkdocs_hooks.py  multipledispatch_plan.md  pyproject.toml  pyrightconfig.json  ray-serialization-fix_plan.md  setup.py  types.py  workflow_function_refactor_plan.md
.claude/: CLAUDE.md  settings.json
.claude/skills/: README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  tracking.yml
.github/workflows/: ci.yml  docs.yml  labeler.yml
design/: 01-design-principles.md  02-infrastructure.md  02-shared-abstractions.md  03-core-abstractions.md  03-values-and-distributions.md  04-computations.md  04-functions.md  04-workflow-functions.md  05-operation-contracts.md  05-operations.md  06-distribution-catalog.md  README.md  package-structure.md
docs/: cite.md  getting-started.md  help.md  index.md  reference_notebooks.md  tutorials.md  user_guide.md
docs/api/: constraints.md  converters.md  diagnostics.md  distributions.md  emulator.md  extending.md  index.md  inference.md  internals.md  joint.md  operations.md  protocols.md  provenance.md  random_functions.md  records.md  transformed.md  validation.md  workflows.md
docs/contributor/: dispatch-conventions.md
docs/examples/: 01_distributions.ipynb  02_records.ipynb  02_transformations.ipynb  03_broadcasting.ipynb  03_joint_distributions.ipynb  04_broadcasting.ipynb  04_joint_distributions.ipynb  05_autodiff.ipynb  05_external_backends.ipynb  06_converting_representations.ipynb  06_modular_forecasting.ipynb  07_emulators.ipynb  07_random_functions.ipynb  07_sequential_updating.ipynb  08_jax_interop.ipynb  08_pytree_array_distributions.ipynb  08_random_functions.ipynb  09_bagged_posteriors.ipynb  09_pytree_array_distributions.ipynb  10_prefect_scalability.ipynb  10_random_functions_and_emulators.ipynb  10_sequential_updating.ipynb  10_transport_maps.ipynb  11_prefect_scalability.ipynb  12_diagnostics_workflow.ipynb  12_mcmc_diagnostics.ipynb  run_prefect_demo.py  run_ray_demo.py
docs/notebooks/: Distributions.ipynb  Plan.txt
docs/orchestration/: ray.md
docs/tutorials/: flexible_inference.ipynb  getting_started.ipynb  simulation_based_inference.ipynb  synthetic_likelihood.ipynb
docs/user_guide/: 02_records.ipynb  03_broadcasting.ipynb  04_joint_distributions.ipynb  06_converting_representations.ipynb  07_sequential_updating.ipynb  09_bagged_posteriors.ipynb  10_random_functions_and_emulators.ipynb  11_prefect_scalability.ipynb  12_diagnostics_workflow.ipynb
example_scripts/: run_prefect_demo.py  run_ray_demo.py
examples/: 01_distributions.ipynb  02_transformations.ipynb  03_joint_distributions.ipynb  04_broadcasting.ipynb  05_autodiff.ipynb  06_modular_forecasting.ipynb  Untitled.ipynb  distributions.ipynb  example_DataAssimilation.ipynb  example_broadcasting.ipynb  example_forecast_pipeline.ipynb  example_forecast_runnable_pipeline.ipynb  example_gaussian_distribution.ipynb  example_mcmc.py  example_module.py  example_node.py  example_time_series.ipynb  example_toy.ipynb  example_workflow.py  provenance_tracking_demo.ipynb  tfp_experiments.ipynb  tfp_tutorial.ipynb
packaging/probpipe/: README.md  pyproject.toml
probpipe/: __init__.py  _array_utils.py  _dtype.py  _utils.py  _weights.py  custom_types.py  example_mcmc.py  example_module.py  example_run.py  generalized_distribution_hierarchy.md  provenance.py  utils.py
probpipe/array_backend/: __init__.py  utils.py
probpipe/converters/: __init__.py  _probpipe.py  _protocol.py  _protocol_converter.py  _registry.py  _scipy.py  _tfp.py
probpipe/core/: __init__.py  _array_backend.py  _array_distributions.py  _broadcast_distributions.py  _distribution_array.py  _distribution_base.py  _empirical.py  _fingerprint.py  _function_contract.py  _joint.py  _modeling_legacy.py  _numeric_record.py  _numeric_record_distribution.py  _random_functions.py  _random_measures.py  _record_array.py  _record_distribution.py  _registry.py  _registry_catalog.py  _utils.py  _values_distribution.py  _workflow_call.py  _workflow_distribution_broadcast.py  _workflow_distribution_normalization.py  _workflow_execution.py  _workflow_normalize.py  _workflow_plan.py  _workflow_result.py  _workflow_sweep.py  config.py  constraints.py  dag.py  dist_utils.py  distribution.py  distributions.py  event_template.py  linear_algebra.py  linear_gaussian_helpers.py  mcmc.py  modeling.py  (+15 more)
probpipe/diagnostics/: __init__.py  _arviz_bridge.py  _datatree.py  _datatree_store.py  _loo.py  _mcmc.py  _ppc_spc.py  _predictive_check.py  _sensitivity.py  _utils.py  _view_base.py  _views.py  diagnostics_workflow.py  mcmc.py  views.py
probpipe/discrepancies/: __init__.py  _kl_registry.py
probpipe/distributions/: __init__.py  _bijector_dispatch.py  _joint_gaussian.py  (+18 more)
tests/: conftest.py  test_array_backend.py  test_array_distribution.py  test_array_utils.py  test_bijector.py  test_bijector_for.py  test_binary_registry.py  test_blackjax_ess.py  test_blackjax_mcmc.py  test_blackjax_rwmh.py  test_blackjax_sgmcmc.py  test_bootstrap_replicate.py  test_broadcast_distribution.py  test_broadcasting.py  test_compute_expectation.py  test_conditionally_independent_likelihood.py  test_continuous.py  test_converters.py  test_coverage_gaps.py  test_design.py  test_discrete.py  test_distribution_array.py  test_distribution_base.py  test_distributions.py  test_dtype.py  test_expectation.py  test_gaussian_random_function.py  test_glm.py  test_inference.py  test_inference_registry.py  test_inference_utils.py  test_iteration_protocol.py  test_joint.py  test_joint_bootstrap.py  test_joint_empirical.py  test_joint_gaussian.py  test_legacy_imports.py  test_minibatch.py  test_modeling.py  test_modeling_init.py  (+40 more)
(+215 files in other folders)
