[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probpipe"
version = "0.1.0"
description = "Tools for probabilistic data-processing pipelines"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Jonathan Huggins", email = "huggins@bu.edu" },
  { name = "Andrew Roberts",   email = "arober@bu.edu" },
  { name = "Yongho Lim",      email = "ylim2@bu.edu" },
  { name = "Can Erozer",      email = "caner@bu.edu" },
  { name = "Jiaqiang Zhu",      email = "julian25@bu.edu" },
]  # See AUTHORS file for full list
dependencies = [
  # arviz 0.x was only reachable while [pymc] allowed pymc 5.x (which caps
  # arviz<1.0); [pymc] now needs pymc>=6, so the floor moves to arviz>=1.1.
  "jax>=0.9",
  "jaxlib>=0.9",
  "tfp-nightly>=0.26.0.dev20260318",
  "blackjax>=1.4",
  "arviz>=1.1,<2.0",
]

[project.optional-dependencies]
prefect = ["prefect>=3"]
viz = ["graphviz", "matplotlib"]
docs = [
  "mkdocs-material",
  "mkdocstrings[python]",
  "mkdocs-jupyter<0.26",
]
stan = ["bridgestan>=2.0", "cmdstanpy>=1.2"]
# pymc 6 is the first release compatible with arviz 1.x (pymc 5.x caps
# arviz<1.0); matplotlib is required by the pymc 6 sampler progress bar.
pymc = ["pymc>=6", "matplotlib"]
nutpie = ["nutpie>=0.12"]
# Amortized neural SBI (NPE/FMPE/CMPE), jax-native via keras (KERAS_BACKEND=jax).
# BayesFlow 2.x requires Python <3.14 and numpy>=2.2.6, so this extra is
# Python 3.12-3.13 only; bare core stays 3.14-capable.
bayesflow = ["bayesflow>=2.0,<3"]
dev = [
  "probpipe[prefect,viz,docs]",
  "pytest>=7",
  "pytest-cov",
  "pytest-xdist",
  "ruff",
  "ipykernel",
  "jupyter",
  "nbformat",
]

[project.urls]
"Repository" = "https://github.com/TARPS-group/prob-pipe"
"Documentation" = "https://tarps-group.github.io/prob-pipe/"
"Changelog" = "https://github.com/TARPS-group/prob-pipe/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["probpipe*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto --dist worksteal -v --cov=probpipe --cov-report=term-missing --cov-fail-under=0"
markers = [
    "prefect: marks tests requiring prefect (deselect with '-m \"not prefect\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific rules
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B905",   # zip without strict= (not always needed)
  "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["probpipe"]