[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probpipe"
version = "0.1.0"
description = "Tools for probabilistic data-processing pipelines"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Jonathan Huggins", email = "huggins@bu.edu" },
  { name = "Andrew Roberts",   email = "arober@bu.edu" },
  { name = "Yongho Lim",      email = "ylim2@bu.edu" },
  { name = "Can Erozer",      email = "caner@bu.edu" },
  { name = "Jiaqiang Zhu",      email = "julian25@bu.edu" },
]  # See AUTHORS file for full list
dependencies = [
  # jax/jaxlib floor raised to >=0.9 now that sbijax (which hard-pinned
  # jax 0.8.1) is gone; the verified stack resolves to 0.10.1. blackjax
  # was held at >=1.3 only to spare sbijax's jax 0.8.1. The arviz <1.0
  # ceiling is retained here and lifted in its own isolated PR (the
  # arviz-1.x ceiling lift).
  "jax>=0.9",
  "jaxlib>=0.9",
  "tfp-nightly>=0.26.0.dev20260318",
  "blackjax>=1.4",
  "arviz>=0.13,<1.0",
]

[project.optional-dependencies]
prefect = ["prefect>=3"]
viz = ["graphviz", "matplotlib"]
docs = [
  "mkdocs-material",
  "mkdocstrings[python]",
  "mkdocs-jupyter<0.26",
]
stan = ["bridgestan>=2.0", "cmdstanpy>=1.2"]
pymc = ["pymc>=5.28"]
nutpie = ["nutpie>=0.12"]
dev = [
  "probpipe[prefect,viz,docs]",
  "pytest>=7",
  "pytest-cov",
  "pytest-xdist",
  "ruff",
  "ipykernel",
  "jupyter",
  "nbformat",
]

[project.urls]
"Repository" = "https://github.com/TARPS-group/prob-pipe"
"Documentation" = "https://tarps-group.github.io/prob-pipe/"
"Changelog" = "https://github.com/TARPS-group/prob-pipe/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["probpipe*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto --dist worksteal -v --cov=probpipe --cov-report=term-missing --cov-fail-under=0"
markers = [
    "prefect: marks tests requiring prefect (deselect with '-m \"not prefect\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific rules
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B905",   # zip without strict= (not always needed)
  "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["probpipe"]