[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
# Minimal core distribution. The friendly `probpipe` name is a metapackage over
# this one that also pulls in the inference backends (packaging/probpipe/). The
# import package is `probpipe` in both cases; only the distribution name differs.
name = "probpipe-core"
version = "0.1.0"
description = "Probabilistic data-processing pipelines — minimal core (inference backends are optional extras)"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "AUTHORS"]
authors = [
  { name = "ProbPipe Development Team", email = "huggins@bu.edu" },
]  # Full contributor list in the AUTHORS file
dependencies = [
  # arviz 0.x was only reachable while [pymc] allowed pymc 5.x (which caps
  # arviz<1.0); [pymc] now needs pymc>=6, so the floor moves to arviz>=1.1.
  "jax>=0.9",
  "jaxlib>=0.9",
  "tfp-nightly>=0.26.0.dev20260318",
  "blackjax>=1.4",
  "arviz>=1.1,<2.0",
]

[project.optional-dependencies]
prefect = ["prefect>=3"]
viz = ["graphviz", "matplotlib"]
docs = [
  "mkdocs-material",
  "mkdocs-redirects",
  "mkdocstrings[python]",
  "mkdocs-jupyter<0.26",
]
# bridgestan 2.7 is the first release whose StanModel constructor takes a
# .stan path directly and serializes a data dict (deprecating from_stan_file).
stan = ["bridgestan>=2.7", "cmdstanpy>=1.2"]
# pymc 6 is the first release compatible with arviz 1.x (pymc 5.x caps
# arviz<1.0); matplotlib is required by the pymc 6 sampler progress bar.
pymc = ["pymc>=6", "matplotlib"]
nutpie = ["nutpie>=0.12"]
# Amortized neural SBI (NPE/FMPE/CMPE), jax-native via keras (KERAS_BACKEND=jax).
# BayesFlow 2.x requires Python <3.14 and numpy>=2.2.6, so this extra is
# Python 3.12-3.13 only; bare core stays 3.14-capable.
bayesflow = ["bayesflow>=2.0,<3"]
dev = [
  "probpipe-core[prefect,viz,docs]",
  "pytest>=7",
  "pytest-cov",
  "pytest-xdist",
  "ruff",
  "ipykernel",
  "jupyter",
  "nbformat",
]

[project.urls]
"Repository" = "https://github.com/TARPS-group/prob-pipe"
"Documentation" = "https://tarps-group.github.io/prob-pipe/"
"Changelog" = "https://github.com/TARPS-group/prob-pipe/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["probpipe*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto --dist worksteal -v --cov=probpipe --cov-report=term-missing --cov-fail-under=0"
markers = [
    "prefect: marks tests requiring prefect (deselect with '-m \"not prefect\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
# Formatting is owned by ruff format (Black-style, at the line-length above).
# quote-style normalizes string quotes to double; notebooks are excluded so the
# docs' tutorial cells keep their compact, hand-curated layout (they are still
# linted — see the per-file-ignores below).
quote-style = "double"
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific rules
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B905",   # zip without strict= (not always needed)
  "SIM108", # ternary operator (readability preference)
  "SIM102", # collapsible nested if — a guard plus its body often reads clearer
            # split than as one long `and` chain (readability preference)
  # Ambiguous-unicode rules fire constantly on legitimate mathematical
  # notation in a Bayesian-stats codebase — Greek letters, en-dashes,
  # →, ×, ≤, etc. in docstrings/comments/strings are intentional, not
  # homoglyph mistakes. The homoglyph-attack surface these rules guard
  # is negligible here, so the rules are pure noise.
  "RUF001", # ambiguous character in a string
  "RUF002", # ambiguous character in a docstring
  "RUF003", # ambiguous character in a comment
]

# Notebooks are hand-curated teaching material — excluded from formatting (see
# [tool.ruff.format]) and executed in CI (which catches real errors), so per-cell
# lint style enforcement adds friction without much value; skip them here too.
exclude = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
# Re-export facades: unused-import (F401) is the point, and __init__ /
# distribution.py set up warnings/registration or interleave a delegating
# __getattr__ before importing, so module imports aren't all at the top (E402).
"__init__.py" = ["F401", "E402"]
"probpipe/core/distribution.py" = ["E402"]
# Demo scripts and tests legitimately import after setup (sys.path / env) or a
# pytest.importorskip(...) guard, so E402 there is expected.
"example_scripts/*" = ["E402"]
"tests/**" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["probpipe"]
